force-app/main/default/objects/Gong__Gong_Call__c/fields/Gong__Call_Brief__c.field-meta.xml
<CustomField>
    <fullName>Gong__Call_Brief__c</fullName>
    <label>Call Brief</label>
    <length>65536</length>
    <type>Html</type>
</CustomField>