force-app/main/default/objects/Gong__Gong_Call__c/fields/Gong__Call_Highlights_Next_Steps__c.field-meta.xml
<CustomField>
    <fullName>Gong__Call_Highlights_Next_Steps__c</fullName>
    <label>Call Highlights - Next Steps</label>
    <length>65536</length>
    <type>Html</type>
</CustomField>