force-app/main/default/objects/Gong__Gong_Call__c/fields/Gong__Call_Key_Points__c.field-meta.xml
<CustomField>
    <fullName>Gong__Call_Key_Points__c</fullName>
    <label>Call Key Points</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>