force-app/main/default/objects/Gong__Gong_Call__c/fields/Gong__Call_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Gong__Call_Outcome__c</fullName>
    <label>Call Outcome</label>
    <type>TextArea</type>
</CustomField>