force-app/main/default/objects/Gong__Gong_Call__c/fields/Gong__Economic_Pulse_Occurence__c.field-meta.xml
<CustomField>
    <fullName>Gong__Economic_Pulse_Occurence__c</fullName>
    <description>Dedicated to pre-defined Tracker named &apos;Economic Pulse (by Gong)&apos;. This field is valuable for creating some reports that show the percentage of Conversations where this Tracker occurred</description>
    <label>Economic Pulse Occurence</label>
    <summaryFilterItems>
        <field>Gong__Tracker__c.Name</field>
        <operation>equals</operation>
        <value>Economic pulse (by Gong)</value>
    </summaryFilterItems>
    <summaryForeignKey>Gong__Tracker__c.Gong__Gong_Interaction__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>